(lang dune 3.13)
(name tost)

(source
 (github HSMF/tost))

(authors "hyde")

(maintainers "hyde")

(license MIT)

; (documentation https://url/to/documentation)

(package
 (name tost)
 (synopsis "tost compiler")
 (description "Bootstrap tost compiler")
 (depends ocaml dune sedlex)
 )

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project


